# Home_work_lesson_19.2

./: README.md  catalog.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: work_to_bd.py
catalog/migrations/: 0001_initial.py  0002_alter_product_description.py  0002_product_manufactured_at.py  0003_alter_category_description.py  0004_alter_product_created_at_alter_product_price_and_more.py  0005_rename_image_product_photo.py  0006_version.py  0007_product_owner.py  0008_alter_product_options_product_is_publication.py
catalog/templates/: base.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_footer.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  material_form.html  material_list.html
materials/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
