[tool.poetry]
name = "home-work-lesson-19-2"
version = "0.1.0"
description = ""
authors = ["Gladkov Sergey <melcor2006@mail.ru>"]
readme = "README.md"
packages = [{include = "home_work_lesson_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pillow = "^10.3.0"
ipython = "^8.24.0"
black = "^24.4.2"
psycopg-binary = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
